2010-08-07  Per Bothner  <per@bothner.com>

	* Type.java (class ClassToTypeMap): Change to a member class.
	Remove default constructor.
	(ClassToTypeMap.matches): Fix - parameter should be key type,
	not value type.

2010-08-01  Per Bothner  <per@bothner.com>

	* ClassType.java: Add 'synchronized' a bunch of places.  This is needed
	when reading "existing" classes, because we share a global
	mapNameToType and hence the set of existing classes is shared.
	* Field.java: Likewise.

	* ClassType.java (make(String,ClassType)): Deprecate.

2010-07-19  Per Bothner  <per@bothner.com>

	* CpoolFloat.java: Remove no-longer-used class.
	Replaced by CpoolValue1.java - in 1997!

2010-04-10  Per Bothner  <per@bothner.com>

	* AnnotationEntry.java: New class - a placeholder for future
	annotation support.

2010-04-02  Per Bothner  <per@bothner.com>

	* PrimType.java (coerceFromObject): Add support for boolean.

2010-01-10  Per Bothner  <per@bothner.com>

	* RuntimeAnnotationsAttr.java (printAnnotationElementValue):
	Print a class annotation value.

	Support reading/printing (but not yet generating) annotations.
	* RuntimeAnnotationsAttr.java: New class, extends MiscAttr, for
	"RuntimeVisibleAnnotations" or "RuntimeInvisibleAnnotations".

	* Makefile.am: Update accordingly.
	* ClassTypeWriter.java (PRINT_EXTRAS): New flag.
	(printSpaces, getCpoolEntry, printConstantTersely,
	printContantUtf8AsClass): New methods.
	* ClassFileInput.java (readAttribute): Handle
	"RuntimeVisibleAnnotations" and "RuntimeInvisibleAnnotations".
	* MiscAttr.java (u1, u2): New methods.

	* Type.java (printSignature): Add fall-back/default.

	* StackMapTableAttr.java (write): Call super write.
	* ClassFileInput.java (getClassConstant): New convenience method.
	(readClassInfo): Use it.

	* dump.java (main): Better error message if opening jar: URL fails.

	* StackMapTableAttr.java:  Change to extend MiscAttr.
	Move data, dataLength to MiscAttr.